📝 docs: correct HikariCP pinning explanation and update year to 2026
- Fix spike conclusion: Java 25 has JEP 491 (Java 24+) which eliminates
  synchronized pinning — confirmed empirically with zero pin events from
  -Djdk.tracePinnedThreads=full flag during benchmarks
- Correct root cause: Java degradation is HikariCP internal serialization
  (synchronized as single lock point under 500 concurrent VTs), not pinning
- Update conclusion 4 to reflect ecosystem maturity finding vs VT model flaw
- Update "Por que três backends?" summary to accurate framing
- Update year from 2025 to 2026 in README and all 59 Java/Go source headers

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>